--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <section class="relative overflow-hidden">
       <div class="absolute inset-0 -z-10">
         <img
-          src="images/6.png"
+          src="Images/6.png"
           alt="Hero"
           class="h-full w-full object-cover"
         />
