--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <title>Ayush Acharya – Time Freedom & Autonomy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -87,11 +90,12 @@
         <div class="max-w-3xl">
           <h1
             class="text-4xl md:text-6xl font-bold tracking-tight opacity-100 translate-y-0"
-          >
-            Build a life around time freedom and autonomy.
+          style="font-family: 'Inter', sans-serif;"
+            >
+            Build a life around time freedom and autonomy. 
           </h1>
           <p class="mt-5 text-lg text-stone-700 max-w-2xl">
-            I’m Ayush Acharya. I share systems for researchers and students to
+            I am Ayush Acharya. I share systems for researchers and students to
             do great work, earn time freedom, and build creator businesses—
             without burning out.
           </p>
@@ -531,59 +535,84 @@
         </p>
       </div>
 
-      <div class="grid lg:grid-cols-3 gap-6">
-        <!-- YT 1 -->
-        <div class="rounded-3xl overflow-hidden bg-white shadow-sm">
-          <div
-            class="aspect-video bg-stone-200 grid place-items-center text-stone-600"
-          >
-            <span class="text-3xl">▶</span>
-          </div>
-          <div class="p-5">
-            <h3 class="font-semibold text-sm md:text-base">
-              Video title placeholder #1
-            </h3>
-            <p class="text-sm text-stone-600 mt-1">
-              Add your YouTube video URL or embed here.
-            </p>
-          </div>
-        </div>
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
 
-        <!-- YT 2 -->
-        <div class="rounded-3xl overflow-hidden bg-white shadow-sm">
-          <div
-            class="aspect-video bg-stone-200 grid place-items-center text-stone-600"
-          >
-            <span class="text-3xl">▶</span>
-          </div>
-          <div class="p-5">
-            <h3 class="font-semibold text-sm md:text-base">
-              Video title placeholder #2
-            </h3>
-            <p class="text-sm text-stone-600 mt-1">
-              Add your YouTube video URL or embed here.
-            </p>
-          </div>
-        </div>
-
-        <!-- YT 3 -->
-        <div class="rounded-3xl overflow-hidden bg-white shadow-sm">
-          <div
-            class="aspect-video bg-stone-200 grid place-items-center text-stone-600"
-          >
-            <span class="text-3xl">▶</span>
-          </div>
-          <div class="p-5">
-            <h3 class="font-semibold text-sm md:text-base">
-              Video title placeholder #3
-            </h3>
-            <p class="text-sm text-stone-600 mt-1">
-              Add your YouTube video URL or embed here.
-            </p>
-          </div>
-        </div>
+  <!-- Card 1 -->
+  <a
+    href="https://youtu.be/vqGGXn3T9JE"
+    target="_blank"
+    class="group rounded-3xl overflow-hidden bg-white shadow-sm hover:shadow-md transition"
+  >
+    <div class="aspect-video bg-stone-200 relative">
+      <img
+        src = "Images/million.png"
+        alt="How I Plan to Turn My PhD Stipend Into Millions"
+        class="h-full w-full object-cover transition-transform duration-500 group-hover:scale-105"
+      />
+      <div class="absolute inset-0 flex items-center justify-center">
+        <span class="text-white text-4xl bg-black/50 rounded-full px-4 py-2">
+          ▶
+        </span>
       </div>
-    </section>
+    </div>
+    <div class="p-5">
+      <h3 class="font-semibold text-sm md:text-base">
+        How I Plan to Turn My PhD Stipend Into Millions
+      </h3>
+    </div>
+  </a>
+
+  <!-- Card 2 -->
+  <a
+    href="https://youtu.be/ufALIXcVZjQ"
+    target="_blank"
+    class="group rounded-3xl overflow-hidden bg-white shadow-sm hover:shadow-md transition"
+  >
+    <div class="aspect-video bg-stone-200 relative">
+      <img
+        src = "Images/fail.png"
+        alt="Video Title 2"
+        class="h-full w-full object-cover transition-transform duration-500 group-hover:scale-105"
+      />
+      <div class="absolute inset-0 flex items-center justify-center">
+        <span class="text-white text-4xl bg-black/50 rounded-full px-4 py-2">
+          ▶
+        </span>
+      </div>
+    </div>
+    <div class="p-5">
+      <h3 class="font-semibold text-sm md:text-base">
+        How I failed in 2025
+      </h3>
+    </div>
+  </a>
+
+  <!-- Card 3 -->
+  <a
+    href="https://youtu.be/yUsEPQyyzXQ"
+    target="_blank"
+    class="group rounded-3xl overflow-hidden bg-white shadow-sm hover:shadow-md transition"
+  >
+    <div class="aspect-video bg-stone-200 relative">
+      <img
+        src="Images/Advice.png"
+        alt="Video Title 3"
+        class="h-full w-full object-cover transition-transform duration-500 group-hover:scale-105"
+      />
+      <div class="absolute inset-0 flex items-center justify-center">
+        <span class="text-white text-4xl bg-black/50 rounded-full px-4 py-2">
+          ▶
+        </span>
+      </div>
+    </div>
+    <div class="p-5">
+      <h3 class="font-semibold text-sm md:text-base">
+        Honest Advice for Anyone Considering Graduate School
+      </h3>
+    </div>
+  </a>
+
+</div>
 
     <!-- About -->
     <section id="about" class="mx-auto max-w-7xl px-5 py-16">
